<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="16dp">


    <!-- ingredient measurements -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        >

        <TextView
            android:id="@+id/tv_recipe_detail"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:textSize="16sp"
            android:padding="15dp" />

    </ScrollView>

    <!-- instruction on how to make the stuff -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_recipe_detail"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"     />


</LinearLayout>
